--- a/Neon.Web/wwwroot/scss/modules/reset.scss
+++ b/Neon.Web/wwwroot/scss/modules/reset.scss
@@ -3,6 +3,7 @@
 	border: 0;
 	margin: 0;
 	border-color: transparent;
+	background-color: transparent;
 
 	&, &::before, &::after {
 		box-sizing: border-box;
