--- a/Neon.Web/Views/Shared/_Layout.cshtml
+++ b/Neon.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,10 @@
     {
         <meta name="resource" content='@Json.Serialize(data.Resource)'/>
     }
+    @if (User.IsAuthenticated())
+    {
+        <meta name="user-key" content="@User.GetKey().ToString()"/>
+    }
     <title>@data.Title | @Resource.Project_Name</title>
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400%3B700&display=swap">
