--- a/Neon.Web/Views/Lobby/Index.cshtml
+++ b/Neon.Web/Views/Lobby/Index.cshtml
@@ -32,9 +32,9 @@
             </label>
         </div>
         <div>
-            <div class="neon-lobby-active-users"></div>
-            <div class="neon-lobby-incoming-user-requests"></div>
-            <div class="neon-lobby-outgoing-user-requests"></div>
+            <div id="neon-lobby-active-users"></div>
+            <div id="neon-lobby-incoming-user-requests"></div>
+            <div id="neon-lobby-outgoing-user-requests"></div>
         </div>
     </div>
     <div class="neon-user-equipment-container">
