--- a/Neon.Web/wwwroot/css/site.css
+++ b/Neon.Web/wwwroot/css/site.css
@@ -290,14 +290,14 @@ input:not([type]) {
   gap: 1ch;
 }
 
-.neon-lobby-active-users-container,
+#neon-lobby-active-users-container,
 .neon-user-equipment-container,
 .neon-user-inventory-container {
   max-height: 100%;
   display: flex;
 }
 
-.neon-lobby-active-users-container,
+#neon-lobby-active-users-container,
 .neon-user-inventory-container {
   flex: 1;
 }
