--- a/Neon.Web/Views/Lobby/Index.cshtml
+++ b/Neon.Web/Views/Lobby/Index.cshtml
@@ -15,7 +15,7 @@
 }
 
 <div class="neon-lobby-container">
-    <div class="neon-lobby-active-users-container">
+    <div id="neon-lobby-active-users-container">
         <div class="neon-lobby-request-action-menu">
             <label class="neon-theme-front-common">
                 <input type="radio" name="request-action" value="Send" checked>
@@ -28,7 +28,6 @@
             <label class="neon-theme-front-common">
                 <input type="radio" name="request-action" value="Cancel">
                 <partial name="Svg/RequestAction/Cancel"/>
-
             </label>
         </div>
         <div>
